--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "vscode-emacs-tab",
     "displayName": "vscode-emacs-tab",
     "description": "emacs like tab behavior",
-    "version": "0.0.8",
-    "publisher": "garaemon",
+    "version": "0.0.9",
+    "publisher": "derjanb",
     "repository": {
         "type": "git",
-        "url": "https://github.com/garaemon/vscode-emacs-tab.git"
+        "url": "https://github.com/derjanb/vscode-emacs-tab.git"
     },
     "engines": {
         "vscode": "^1.18.0"
@@ -39,13 +39,13 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.5.3",
-        "vscode": "^1.1.5",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "@types/mocha": "^2.2.42",
+        "@types/node": "^17.0.25",
+        "typescript": "^4.6.3",
+        "vscode": "^1.1.5"
     },
     "dependencies": {
-        "comment-json": "^4.1.1",
+        "comment-json": "^4.2.2",
         "tslint": "^5.8.0"
     }
 }
