--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "vscode-emacs-tab",
     "displayName": "vscode-emacs-tab",
     "description": "emacs like tab behavior",
-    "version": "0.2.0",
-    "publisher": "garaemon",
+    "version": "0.2.1",
+    "publisher": "derjanb",
     "repository": {
         "type": "git",
-        "url": "https://github.com/garaemon/vscode-emacs-tab.git"
+        "url": "https://github.com/derjanb/vscode-emacs-tab.git"
     },
     "engines": {
         "vscode": "^1.67.0"
@@ -59,7 +59,7 @@
         "webpack-cli": "^5.0.0"
     },
     "dependencies": {
-        "comment-json": "^4.1.1",
+        "comment-json": "^4.2.2",
         "tslint": "^5.8.0"
     }
 }
